--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <meta name="author" content="Jason Jones" />
 
-<meta name="date" content="2020-04-06" />
+<meta name="date" content="2020-04-11" />
 
 <meta name="description" content="Thematic Mapping of Demographic &amp; Socioeconomic Data">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","date":"April 06, 2020","output":{"pagedown::html_paged":{"self_contained":false,"toc":true,"css":["style/jason-default-fonts.css","style/jason-default-page.css","style/jason-default.css"],"front_cover":"img/report_cover.png"}},"author":"Jason Jones","title":"Thematic Mapping of Demographic &amp; Socioeconomic Data","chapter_name":"Section: "}
+{"newpage_html_class":"page-break-after","date":"April 11, 2020","output":{"pagedown::html_paged":{"self_contained":false,"toc":true,"css":["style/jason-default-fonts.css","style/jason-default-page.css","style/jason-default.css"],"front_cover":"img/report_cover.png"}},"author":"Jason Jones","title":"Thematic Mapping of Demographic &amp; Socioeconomic Data","chapter_name":"Section: "}
 </script>
 
 <title>Thematic Mapping of Demographic &amp; Socioeconomic Data</title>
@@ -52,7 +52,7 @@
 <div id="header" class="title-page">
 <h1 class="title">Thematic Mapping of Demographic &amp; Socioeconomic Data</h1>
 <h2 class="author">Jason Jones</h2>
-<h2 class="date">April 06, 2020</h2>
+<h2 class="date">April 11, 2020</h2>
 </div>
 </div>
 
@@ -61,16 +61,21 @@
 <ul>
 <li><a href="#per-capita-income"><span class="toc-section-number">1</span> Per Capita Income</a><ul>
 <li><a href="#variable-definition"><span class="toc-section-number">1.1</span> Variable Definition</a></li>
-<li><a href="#maps"><span class="toc-section-number">1.2</span> Maps</a></li>
+<li><a href="#thematic-maps"><span class="toc-section-number">1.2</span> Thematic Maps</a></li>
 </ul></li>
 <li><a href="#median-family-income"><span class="toc-section-number">2</span> Median Family Income</a><ul>
 <li><a href="#variable-definition-1"><span class="toc-section-number">2.1</span> Variable Definition</a></li>
+<li><a href="#thematic-maps-1"><span class="toc-section-number">2.2</span> Thematic Maps</a></li>
 </ul></li>
-<li><a href="#median-value"><span class="toc-section-number">3</span> Median Value</a><ul>
+<li><a href="#median-home-value"><span class="toc-section-number">3</span> Median Home Value</a><ul>
 <li><a href="#variable-definition-2"><span class="toc-section-number">3.1</span> Variable Definition</a></li>
+<li><a href="#thematic-maps-2"><span class="toc-section-number">3.2</span> Thematic Maps</a></li>
 </ul></li>
-<li><a href="#sex-by-age-by-educational-attainment"><span class="toc-section-number">4</span> Sex by Age by Educational Attainment</a><ul>
+<li><a href="#educational-attainment"><span class="toc-section-number">4</span> Educational Attainment</a><ul>
 <li><a href="#variable-definition-3"><span class="toc-section-number">4.1</span> Variable Definition</a></li>
+</ul></li>
+<li><a href="#notes-on-methodology"><span class="toc-section-number">5</span> Notes on Methodology</a><ul>
+<li><a href="#divergent-color-palette"><span class="toc-section-number">5.1</span> Divergent Color Palette</a></li>
 </ul></li>
 </ul>
 </div>
@@ -112,9 +117,9 @@ Paged.registerHandlers(RepeatingTableHeaders);
 <div id="variable-definition" class="section level2">
 <h2><span class="header-section-number">1.1</span> Variable Definition</h2>
 </div>
-<div id="maps" class="section level2">
-<h2><span class="header-section-number">1.2</span> Maps</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-1-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<div id="thematic-maps" class="section level2">
+<h2><span class="header-section-number">1.2</span> Thematic Maps</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-38-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="median-family-income" class="section level1 chapter">
@@ -122,17 +127,32 @@ Paged.registerHandlers(RepeatingTableHeaders);
 <div id="variable-definition-1" class="section level2">
 <h2><span class="header-section-number">2.1</span> Variable Definition</h2>
 </div>
+<div id="thematic-maps-1" class="section level2">
+<h2><span class="header-section-number">2.2</span> Thematic Maps</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-39-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
-<div id="median-value" class="section level1 chapter">
-<h1><span class="header-section-number">3</span> Median Value</h1>
+</div>
+<div id="median-home-value" class="section level1 chapter">
+<h1><span class="header-section-number">3</span> Median Home Value</h1>
 <div id="variable-definition-2" class="section level2">
 <h2><span class="header-section-number">3.1</span> Variable Definition</h2>
 </div>
+<div id="thematic-maps-2" class="section level2">
+<h2><span class="header-section-number">3.2</span> Thematic Maps</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-40-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
-<div id="sex-by-age-by-educational-attainment" class="section level1 chapter">
-<h1><span class="header-section-number">4</span> Sex by Age by Educational Attainment</h1>
+</div>
+<div id="educational-attainment" class="section level1 chapter">
+<h1><span class="header-section-number">4</span> Educational Attainment</h1>
 <div id="variable-definition-3" class="section level2">
 <h2><span class="header-section-number">4.1</span> Variable Definition</h2>
+</div>
+</div>
+<div id="notes-on-methodology" class="section level1 chapter">
+<h1><span class="header-section-number">5</span> Notes on Methodology</h1>
+<div id="divergent-color-palette" class="section level2">
+<h2><span class="header-section-number">5.1</span> Divergent Color Palette</h2>
+<p>For my thematic maps, I selected a diverging color palette to to bring attention to stark differences in low, medium, and high values. I am following best practice recommendations from The United States Census Bureau and have selected the applied colors based on their recommended diverging color palette. I am also trying to account for Web Content Accessibility Guidelines (WCAG) by meeting or exceeding the recommended color contrast ratio minimum. I believe the colors recommended by The Census Bureau meet these guidelines while also striking an acceptable balance with visual appeal. You can find more information online at The Census Bureau’s Data Visualization Standards repository (<a href="https://xdgov.github.io/data-design-standards/" class="uri">https://xdgov.github.io/data-design-standards/</a>).</p>
 </div>
 </div>
 </div>
