--- a/index.html
+++ b/index.html
@@ -65,29 +65,42 @@
 <li><a href="#thematic-maps"><span class="toc-section-number">1.2</span> Thematic Maps</a></li>
 <li><a href="#city-council-overlay"><span class="toc-section-number">1.3</span> City Council Overlay</a></li>
 <li><a href="#county-commissioner-overlay"><span class="toc-section-number">1.4</span> County Commissioner Overlay</a></li>
+<li><a href="#cohort-comparison"><span class="toc-section-number">1.5</span> Cohort Comparison</a></li>
+<li><a href="#county"><span class="toc-section-number">1.6</span> County</a></li>
+<li><a href="#census-designated-places-cdp"><span class="toc-section-number">1.7</span> Census Designated Places (CDP)</a></li>
 </ul></li>
 <li><a href="#median-family-income"><span class="toc-section-number">2</span> Median Family Income</a><ul>
 <li><a href="#variable-definition-1"><span class="toc-section-number">2.1</span> Variable Definition</a></li>
 <li><a href="#thematic-maps-1"><span class="toc-section-number">2.2</span> Thematic Maps</a></li>
 <li><a href="#city-council-overlay-1"><span class="toc-section-number">2.3</span> City Council Overlay</a></li>
 <li><a href="#county-commissioner-overlay-1"><span class="toc-section-number">2.4</span> County Commissioner Overlay</a></li>
+<li><a href="#cohort-comparison-1"><span class="toc-section-number">2.5</span> Cohort Comparison</a></li>
+<li><a href="#county-1"><span class="toc-section-number">2.6</span> County</a></li>
+<li><a href="#census-designated-places-cdp-1"><span class="toc-section-number">2.7</span> Census Designated Places (CDP)</a></li>
 </ul></li>
 <li><a href="#median-home-value"><span class="toc-section-number">3</span> Median Home Value</a><ul>
 <li><a href="#variable-definition-2"><span class="toc-section-number">3.1</span> Variable Definition</a></li>
 <li><a href="#thematic-maps-2"><span class="toc-section-number">3.2</span> Thematic Maps</a></li>
 <li><a href="#city-council-overlay-2"><span class="toc-section-number">3.3</span> City Council Overlay</a></li>
 <li><a href="#county-commissioner-overlay-2"><span class="toc-section-number">3.4</span> County Commissioner Overlay</a></li>
+<li><a href="#cohort-comparison-2"><span class="toc-section-number">3.5</span> Cohort Comparison</a></li>
+<li><a href="#county-2"><span class="toc-section-number">3.6</span> County</a></li>
+<li><a href="#census-designated-places-cdp-2"><span class="toc-section-number">3.7</span> Census Designated Places (CDP)</a></li>
 </ul></li>
 <li><a href="#educational-attainment"><span class="toc-section-number">4</span> Educational Attainment</a><ul>
 <li><a href="#variable-definition-3"><span class="toc-section-number">4.1</span> Variable Definition</a></li>
 <li><a href="#thematic-maps-3"><span class="toc-section-number">4.2</span> Thematic Maps</a></li>
 <li><a href="#city-council-overlay-3"><span class="toc-section-number">4.3</span> City Council Overlay</a></li>
 <li><a href="#county-commissioner-overlay-3"><span class="toc-section-number">4.4</span> County Commissioner Overlay</a></li>
+<li><a href="#cohort-comparison-3"><span class="toc-section-number">4.5</span> Cohort Comparison</a></li>
+<li><a href="#county-3"><span class="toc-section-number">4.6</span> County</a></li>
+<li><a href="#census-designated-places-cdp-3"><span class="toc-section-number">4.7</span> Census Designated Places (CDP)</a></li>
 </ul></li>
 <li><a href="#reference"><span class="toc-section-number">5</span> Reference</a><ul>
 <li><a href="#city-council-districts"><span class="toc-section-number">5.1</span> City Council Districts</a></li>
 <li><a href="#county-commissioner-districts"><span class="toc-section-number">5.2</span> County Commissioner Districts</a></li>
 <li><a href="#divergent-color-palette"><span class="toc-section-number">5.3</span> Divergent Color Palette</a></li>
+<li><a href="#census-bureau-median"><span class="toc-section-number">5.4</span> Census Bureau Median</a></li>
 </ul></li>
 </ul>
 </div>
@@ -142,25 +155,50 @@ Paged.registerHandlers(RepeatingTableHeaders);
 <h2><span class="header-section-number">1.4</span> County Commissioner Overlay</h2>
 <p><img src="index_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
+<div id="cohort-comparison" class="section level2">
+<h2><span class="header-section-number">1.5</span> Cohort Comparison</h2>
+</div>
+<div id="county" class="section level2">
+<h2><span class="header-section-number">1.6</span> County</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="census-designated-places-cdp" class="section level2">
+<h2><span class="header-section-number">1.7</span> Census Designated Places (CDP)</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
 </div>
 <div id="median-family-income" class="section level1 chapter">
 <h1><span class="header-section-number">2</span> Median Family Income</h1>
 <div id="variable-definition-1" class="section level2">
 <h2><span class="header-section-number">2.1</span> Variable Definition</h2>
-<p>The median divides the income distribution into two equal parts: one-half of the cases falling below the median income and one-half above the median. For households and families, the median income is based on the distribution of the total number of households and families including those with no income. The median income for individuals is based on individuals 15 years old and over with income. Median income for households, families, and individuals is computed on the basis of a standard distribution. Median income is rounded to the nearest whole dollar. Median income figures are calculated using linear interpolation.</p>
 <p>In compiling statistics on family income, the incomes of all members 15 years old and over related to the householder are summed and treated as a single amount. Although the family income statistics cover the past 12 months, the characteristics of individuals and the composition of families refer to the time of interview. Thus, the income of the family does not include amounts received by individuals who were members of the family during all or part of the past 12 months if these individuals no longer resided with the family at the time of interview. Similarly, income amounts reported by individuals who did not reside with the family during the past 12 months but who were members of the family at the time of interview are included. However, the composition of most families was the same during the past 12 months as at the time of interview.</p>
 </div>
 <div id="thematic-maps-1" class="section level2">
 <h2><span class="header-section-number">2.2</span> Thematic Maps</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="city-council-overlay-1" class="section level2">
 <h2><span class="header-section-number">2.3</span> City Council Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-9-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="county-commissioner-overlay-1" class="section level2">
 <h2><span class="header-section-number">2.4</span> County Commissioner Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-10-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="cohort-comparison-1" class="section level2">
+<h2><span class="header-section-number">2.5</span> Cohort Comparison</h2>
+</div>
+<div id="county-1" class="section level2">
+<h2><span class="header-section-number">2.6</span> County</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-11-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-12-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="census-designated-places-cdp-1" class="section level2">
+<h2><span class="header-section-number">2.7</span> Census Designated Places (CDP)</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-13-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-14-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="median-home-value" class="section level1 chapter">
@@ -172,15 +210,26 @@ Paged.registerHandlers(RepeatingTableHeaders);
 </div>
 <div id="thematic-maps-2" class="section level2">
 <h2><span class="header-section-number">3.2</span> Thematic Maps</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-15-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="city-council-overlay-2" class="section level2">
 <h2><span class="header-section-number">3.3</span> City Council Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-16-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="county-commissioner-overlay-2" class="section level2">
 <h2><span class="header-section-number">3.4</span> County Commissioner Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-9-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-17-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="cohort-comparison-2" class="section level2">
+<h2><span class="header-section-number">3.5</span> Cohort Comparison</h2>
+</div>
+<div id="county-2" class="section level2">
+<h2><span class="header-section-number">3.6</span> County</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-18-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="census-designated-places-cdp-2" class="section level2">
+<h2><span class="header-section-number">3.7</span> Census Designated Places (CDP)</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-19-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="educational-attainment" class="section level1 chapter">
@@ -191,15 +240,28 @@ Paged.registerHandlers(RepeatingTableHeaders);
 </div>
 <div id="thematic-maps-3" class="section level2">
 <h2><span class="header-section-number">4.2</span> Thematic Maps</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-10-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-20-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="city-council-overlay-3" class="section level2">
 <h2><span class="header-section-number">4.3</span> City Council Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-11-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-21-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="county-commissioner-overlay-3" class="section level2">
 <h2><span class="header-section-number">4.4</span> County Commissioner Overlay</h2>
-<p><img src="index_files/figure-html/unnamed-chunk-12-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-22-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="cohort-comparison-3" class="section level2">
+<h2><span class="header-section-number">4.5</span> Cohort Comparison</h2>
+</div>
+<div id="county-3" class="section level2">
+<h2><span class="header-section-number">4.6</span> County</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-23-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-24-1.png" width="100%" style="display: block; margin: auto;" /></p>
+</div>
+<div id="census-designated-places-cdp-3" class="section level2">
+<h2><span class="header-section-number">4.7</span> Census Designated Places (CDP)</h2>
+<p><img src="index_files/figure-html/unnamed-chunk-25-1.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-26-1.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="reference" class="section level1 chapter">
@@ -345,6 +407,10 @@ Skip Alston
 <div id="divergent-color-palette" class="section level2">
 <h2><span class="header-section-number">5.3</span> Divergent Color Palette</h2>
 <p>For my thematic maps, I selected a diverging color palette to to bring attention to stark differences in low, medium, and high values. I am following best practice recommendations from The United States Census Bureau and have selected the applied colors based on their recommended diverging color palette. I am also trying to account for Web Content Accessibility Guidelines (WCAG) by meeting or exceeding the recommended color contrast ratio minimum. I believe the colors recommended by The Census Bureau meet these guidelines while also striking an acceptable balance with visual appeal. You can find more information online at The Census Bureau’s Data Visualization Standards repository (<a href="https://xdgov.github.io/data-design-standards/" class="uri">https://xdgov.github.io/data-design-standards/</a>).</p>
+</div>
+<div id="census-bureau-median" class="section level2">
+<h2><span class="header-section-number">5.4</span> Census Bureau Median</h2>
+<p>The median divides the income distribution into two equal parts: one-half of the cases falling below the median income and one-half above the median. For households and families, the median income is based on the distribution of the total number of households and families including those with no income. The median income for individuals is based on individuals 15 years old and over with income. Median income for households, families, and individuals is computed on the basis of a standard distribution. Median income is rounded to the nearest whole dollar. Median income figures are calculated using linear interpolation.</p>
 </div>
 </div>
 </div>
